Fix Logo visibility using DOM

--- a/portfolio.css
+++ b/portfolio.css
@@ -49,8 +49,12 @@ a {
   cursor: pointer;
 }
 
-.logo:active {
-  display: none;
+.logo {
+  visibility: visible;
+}
+
+.logo-responsive {
+  visibility: hidden;
 }
 
 .bar {
